# bookcrawler

./: .dockerignore  .env  .gitignore  README.md  bookcrawler  bookcrawler.drawio  docker-compose.dev.yml  docker-compose.yml
api/: Dockerfile  command.sh  index.js  manage.py  package.json  requirements.txt
api/src/: __init__.py  app.js  config.py
bw-webserver/: Dockerfile  index.ts  package.json
bws/: .gitignore  Cargo.toml  Dockerfile  config.toml  go.mod  go.sum  main.go  sources.json
bws/crates/crawl/: Cargo.toml
bws/crates/crawl/src/: config.rs  http.rs  main.rs  util.rs
bws/crates/crawl/src/source/: mod.rs  wikidich.rs
bws/crates/search/: Cargo.toml
bws/crates/ui/: Cargo.toml
bws/crates/ui/src/: main.rs
bws/crawl/: book.go  crawl.go  metruyencv.go  source.go  wikidich.go
bws/pkg/db/errors/: redis.go
bws/pkg/db/generic/: base.go  list.go
bws/pkg/db/mongo/: client.go  client_options.go  col.go  db.go  db_options.go  default_options.go  result.go  transaction.go
bws/pkg/db/redis/: client.go  client_methods.go  contains.go  defaults.go  options.go  pool.go
bws/pkg/db/sql/: sql.go
bws/pkg/db/utils/: utils.go
bws/pkg/goseaweedfs/: buffer.go  chunk.go  entity.go  filepath.go  filer.go  http_client.go  lookup.go  response_result.go  seaweed.go  utils.go
cron/: Dockerfile  command.sh  data.html  requirements.txt  schedule.sh  scheduler.txt  scrapy.cfg  wikidich_list.json  wk_books_cron.sh  wk_chaps_cron.sh
cron/cron/: db_connect.py  (+5 more)
cron_crawl/: scrapy.cfg
k8s/: mongo.yaml
nginx/: Dockerfile  command.sh
scripts/: dum_sql.ps1
(+32 files in other folders)
